# Tendertide

./: README.md
TenderTracker/: README.md  manage.py  pyproject.toml  sample_data.py
TenderTracker/accounts/: authentication.py  models.py  urls.py  views.py
TenderTracker/accounts/migrations/: 0001_initial.py
TenderTracker/accounts/templates/accounts/: login.html  register.html
TenderTracker/attached_assets/: Pasted-UndefinedError-jinja2-exceptions-UndefinedError-pages-is-undefined-Traceback-most-recent-cal-1739869533306.txt
TenderTracker/static/css/: chatbot.css  style.css
TenderTracker/templates/: about.html  advanced_search.html  base.html  contact.html  index.html  login.html  news.html  profile_company.html  profile_user.html  register.html  services.html  tender_detail.html
TenderTracker/templates/admin/: create_tender.html  dashboard.html
TenderTracker/tenders/: __init__.py  apps.py  models.py  urls.py  views.py
TenderTracker/tenders/migrations/: 0001_initial.py
TenderTracker/tenders/templates/tenders/: create_tender.html  home.html  tender_list.html
TenderTracker/tendertide/: __init__.py  settings.py  urls.py  wsgi.py
webScraper/: AutoRunner.py  README.md  WS01-ted.py  WS02-philgeps.py  WS03-worldbank.py  WS04-contractfinder.py  ca.py  dbconnectiontesting.py  dbtest.py  prac.py  prac.spec  scraper.py  sites.txt
