[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "bson>=0.5.10",
    "oauthlib>=3.2.2",
    "sqlalchemy>=2.0.38",
    "werkzeug>=3.1.3",
    "django>=5.1.6",
    "django-crispy-forms>=2.3",
    "pillow>=11.1.0",
    "python-dotenv>=1.0.1",
    "crispy-bootstrap5>=2024.10",
]
